--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "crypto-js": "^3.1.6",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "hbs": "^4.0.1",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
-    "mongoose": "^5.3.16"
+    "mongoose": "^5.3.16",
+    "validator": "^5.6.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
