--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto-js": "^3.1.6",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "hbs": "^4.0.1",
     "jsonwebtoken": "^7.1.9",
     "lodash": "^4.15.0",
